--- a/css/base.css
+++ b/css/base.css
@@ -36,11 +36,11 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'MuseoSans500Regular', Arial, sans-serif;
 	font-weight: normal;
 	line-height:1.2em;
-	margin:0 0 1.5em 0;
+	margin:0 0 0.7em 0;
 	text-shadow:0 1px 0 #fff;
 	}
 h1 {
-	
+	font-size: 2.8em;
 	}
 h2 {
 	font-size:24px;
