--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,10 @@ nav.primary {
 	height: 20%;
 	content: "";
 	}
+#description{
+	max-width: 400px;
+	margin:0 auto;
+	}
 .media-holder-bg {
 	position:absolute;
 	left:0;
