--- a/css/layout.css
+++ b/css/layout.css
@@ -676,32 +676,43 @@ a.pp_close { right: 10px!important; top: 10px!important; }
 	}
 
 
-	#slider .container .grid_12 #obr1 img{
+	#slider .container .grid_12 #obr1 {
 
-	float:left;
+	display: block;
+	float: left;
 	width: 226px;
 	height: 200px;
-	padding-right: 20px;
+	position: relative;
+	/*padding-right: 20px;*/
+	border: 1px black solid;
 
 	}
-	#slider .container .grid_12 #obr2 img{
+	#slider .container .grid_12 #obr2 {
 
-		float:left;
-	width: 292px;
-	height: 200px;
-		padding-right: 20px;
-		}
+		display:block;
+		float: left;
+		width: 292px;
+		position: relative;
+		height: 200px;
+		/*padding-right: 20px;*/
+		border: 1px black solid;
+	}
 
-	#slider .container .grid_12 #obr3 img{
+	#slider .container .grid_12 #obr3 {
 
-		float:left;
+		display: block;
+		float: left;
+		position: relative;
 		width: 336px;
 		height: 200px;
-		padding-right: 20px;
+		/*padding-right: 20px;*/
+		border: 1px black solid;
 
 	}
 
 	#inter {
-
+		display: inline-block;
+		position: relative;
 		margin-top: 129px;
+		border: 1px black solid;
 	}
